--- a/public/google-redirect.html
+++ b/public/google-redirect.html
@@ -35,23 +35,28 @@ limitations under the License.
   <script src="/__/firebase/init.js"></script>
 
   <script type="text/javascript">
-    function request() {
-      return fetch('http://localhost:5001/breaddit-885b4/us-central1/api/karma/comment/12314', {
-        method: 'POST', // *GET, POST, PUT, DELETE, etc.
-        mode: 'no-cors', // no-cors, cors, *same-origin
-        cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-        credentials: 'same-origin', // include, *same-origin, omit
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        redirect: 'follow', // manual, *follow, error
-        referrer: 'no-referrer', // no-referrer, *client,
-		body: "{}"
-      })
-      .then(response => console.log(JSON.stringify(response, null, 2))); // parses JSON response into native JavaScript objects 
-    }
+    async function request(bool) {
+      console.log('FUNCTION EXECUTED');
+      var test = {
+        'vote': bool
+      };
+      let token = await firebase.auth().currentUser.getIdToken();
 
-    
+      console.log('token');
+      console.log(token);
+
+      let val = await fetch('http://localhost:5001/breaddit-885b4/us-central1/api/karma/comment/-LrzMy3yhYJfR6mefUaN', {
+          method: 'POST', // *GET, POST, PUT, DELETE, etc.
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': token
+          },
+          body: JSON.stringify(test)
+        })
+        .then((resp) => resp.text()); // parses JSON response into native JavaScript objects 
+
+      console.log(val);
+    }
 
     /**
      * Function called when clicking the Login/Logout button.
@@ -184,6 +189,9 @@ limitations under the License.
         </div>
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
           <button class="mdl-button mdl-js-button mdl-button--raised" id="test">Upvote</button>
+          <br>
+          <br>
+          <button class="mdl-button mdl-js-button mdl-button--raised" id="testfalse">Downvote</button>
 
           <p>Sign in with your Google account below.</p>
 
@@ -204,7 +212,12 @@ limitations under the License.
   </main>
 </div>
 <script>
-document.querySelector('#test').addEventListener("click", request, false);
+document.querySelector('#test').addEventListener("click", () => {
+  request(true)
+}, false);
+document.querySelector('#testfalse').addEventListener("click", () => {
+  request(false)
+}, false);
 </script>
 </body>
 </html>
