Fixed some CORS issues.

--- a/public/google-redirect.html
+++ b/public/google-redirect.html
@@ -45,7 +45,7 @@ limitations under the License.
       console.log('token');
       console.log(token);
 
-      let val = await fetch('http://localhost:5001/breaddit-885b4/us-central1/api/karma/comment/-LrzMy3yhYJfR6mefUaN', {
+      let val = await fetch('https://us-central1-breaddit-885b4.cloudfunctions.net/api/karma/comment/-LrzMy3yhYJfR6mefUaN', {
           method: 'POST', // *GET, POST, PUT, DELETE, etc.
           headers: {
             'Content-Type': 'application/json',
