--- a/public/index.html
+++ b/public/index.html
@@ -18,73 +18,141 @@ limitations under the License.
 <head>
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Firebase Authentication Example</title>
-
-  <!-- Material Design Theming -->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-
-  <link rel="stylesheet" href="main.css">
+  <title>Breaddit-Homepage</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik&display=swap" rel="stylesheet">
+  <link rel = "stylesheet" type = "text/css" href = "breaddit.css">
+  <script defer src="/__/firebase/7.1.0/firebase-app.js"></script>
+  <script defer src="/__/firebase/7.1.0/firebase-auth.js"></script>
+  <script defer src="/__/firebase/init.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/327de1ef48.js"></script>
+  <script src="server-requests.js"></script>
 </head>
 <body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
-  <!-- Header section containing title -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <h3>Firebase Authentication</h3>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="nav">
+    <a disabled id="home" class="navbar-brand" href="#"><i class="fas fa-bread-slice"></i> breaddit</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a disabled class="nav-link" href="#" id="userprofile">User</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0" id="myform">
+        <span class="fa fa-search form-control-feedback" id="sIcon"></span>
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" id="search">
+        <button disabled class="btn my-2 my-sm-0" type="submit" id="submit">Search</button>
+      </form>
     </div>
-  </header>
-
-  <main class="mdl-layout__content mdl-color--grey-100">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-
-      <!-- Container for the Table of content -->
-      <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">Table of Content</h2>
-        </div>
-        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <p>
-            There are multiple methods available for authentication with Firebase. Ensure that the appropriate sign-in method has been
-            enabled in the Firebase Console authentication panel. Note: custom auth does not require enabling.
-          </p>
-
-          <ul>
-            <li><a href="anon.html">Anonymous</a></li>
-            <li><a href="email-password.html">Email and Password authentication</a></li>
-            <li><a href="email-link.html">Email Link authentication</a></li>
-            <li><a href="customauth.html">Custom Authentication</a> and an Example <a href="exampletokengenerator/auth.html">Custom Token Generator</a><br><br></li>
-
-            <li><a href="phone-visible.html">Phone number sign-in with visible ReCaptcha</a></li>
-            <li><a href="phone-invisible.html">Phone number sign-in with invisible ReCaptcha</a></li>
-            <li><a href="phone-simple.html">Phone number sign-in with simplified popup flow (not recommended for production apps)</a><br><br></li>
-
-            <li><a href="google-popup.html">Google sign-in using Popup</a></li>
-            <li><a href="google-redirect.html">Google sign-in using Redirect</a></li>
-            <li><a href="google-credentials.html">Google sign-in using OAuth Credentials (via Google Sign-in Button)</a><br><br></li>
-
-            <li><a href="facebook-popup.html">Facebook login using Popup</a></li>
-            <li><a href="facebook-redirect.html">Facebook login using Redirect</a></li>
-            <li><a href="facebook-credentials.html">Facebook login using OAuth Credentials (via Facebook Login Button)</a><br><br></li>
-
-            <li><a href="twitter-popup.html">Twitter sign-in using Popup</a></li>
-            <li><a href="twitter-redirect.html">Twitter sign-in using Redirect</a><br><br></li>
-
-            <li><a href="microsoft-popup.html">Microsoft sign-in using Popup</a></li>
-            <li><a href="microsoft-redirect.html">Microsoft sign-in using Redirect</a><br><br></li>
-
-            <li><a href="github-popup.html">GitHub sign-in using Popup</a></li>
-            <li><a href="github-redirect.html">GitHub sign-in using Redirect</a></li>
-          </ul>
+  </nav>
+  <br>
+  <div class="container">
+    <section id="notloggedin">
+      <!--button id="test">Upvote</button>
+      <button id="testfalse">Downvote</button>
+      <button id="testprofile">Profile</button-->
+      <div class="jumbotron bg-dark">
+        <h1>Welcome to Breaddit!</h1>
+        <p>Sign in with Google and choose your username to continue</p>
+      </div>
+      <input name="myname" type="text" class="text-white bg-dark hidden" id="myname" placeholder="Your screenname" /> &nbsp;
+      <button type="button" class="text-white bg-dark hidden" id="join">Join Breaddit</button>
+      <!-- Container where we'll display the user details -->
+      <!--div class="quickstart-user-details-container">
+        <Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
+        <div>Firebase auth <code>currentUser</code> object value:</div>
+        <pre><code id="quickstart-account-details">null</code></pre>
+        <div>Google OAuth Access Token:</div>
+        <pre><code id="quickstart-oauthtoken">null</code></pre>
+      </div-->
+    </section>
+    <section class="hidden" id="homepage">
+      <div class="jumbotron bg-dark">
+        <input name="breaddit" class="text-white bg-dark" type="text" id="breaddit" placeholder="New breaddit name" />
+        <button type="button" class="text-white bg-dark" id="createbreaddit">Create Breaddit</button>
+      </div>
+      <div id="posts">
+        <div class="card text-white bg-dark w-100">
+          <div class="d-flex bd-highlight card-body">
+            <div class="p-2 bd-highlight float-left" id="votes">
+              <i class="fas fa-caret-up"></i><br>
+              1<br>
+              <i class="fas fa-caret-down"></i>
+            </div>
+            <div class="p-2 flex-grow-1 bd-highlight float-right">
+              <h6 class="card-subtitle mb-2 text-muted text-left">b/breaddit • by sampleuser</h6>
+              <h5 class="card-title text-left">sample post</h5>
+              <p class="card-text text-left">kdsjfksdfjndksnf</p>
+            </div>
+          </div>
         </div>
       </div>
-
+    </section>
+    <section class="hidden" id="profile">
+      <div class="jumbotron bg-dark">
+        <h1 id="userscreenname"></h1>
+        user details here
+      </div>
+    </section>
+    <section class="hidden" id="newPost">
+      <h1 id="newpostheader"></h1>
+      <p>
+        <input name="postTitle" type="text" id="postTitle" placeholder="Title" />
+        <textarea name="postBody" type="textarea" id="#postBody" placeholder="Body"></textarea>
+        <button type="button" id="submitNewPost">Submit</button>
+      </p>
+      </section>
+      <section class="hidden" id="breadditPage">
+        <h1 id="breadditname"></h1>
+        <button type="button" id="createNewPost">Create New Post</button>
+        <ul id="breadditposts"></ul>
+      </section>
+      <br>
+      <button disabled type="button" class="text-white bg-dark" id="googlesignin">Join Breaddit</button>
     </div>
-  </main>
-</div>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script>
+      /*document.querySelector('#test').addEventListener("click", () => {
+        request(true)
+      }, false);
+      document.querySelector('#testfalse').addEventListener("click", () => {
+        request(false)
+      }, false);
+      document.querySelector('#testprofile').addEventListener("click", () => {
+        request_profile(false)
+      }, false);*/
+      $("#join").click(function(){
+        var name = $("#myname").val();
+        // function to add username to the user
+        $("#userprofile").append(` ${name}`);
+        $("#submit").prop("disabled", false);
+        $("#home").prop("disabled", false); //enable navbar links
+        $("#userprofile").prop("disabled", false);
+        $("#googlesignin").addClass("hidden");
+        $("#notloggedin").addClass("hidden");
+        $("#homepage").removeClass("hidden"); //switch to actual homepage
+      });
+      $("#home").click(function(){
+        $("#breadditPage").addClass("hidden");
+        $("#profile").addClass("hidden");
+        $("#newPost").addClass("hidden");
+        $("#googlesignin").addClass("hidden");
+        $("#homepage").removeClass("hidden");
+        //shows homepage content that only allows you to veiw new posts and create a new breaddit
+        //function to GET all posts and display them each in #posts
+      });
+      $("#userprofile").click(function(){
+        $("#breadditPage").addClass("hidden");
+        $("#newPost").addClass("hidden");
+        $("#homepage").addClass("hidden");
+        $("#profile").removeClass("hidden"); //show just profile and allow user to sign out
+        $("#googlesignin").removeClass("hidden");
+        //function to GET all User details
+      });
+    </script>
+  </body>
 </html>
