post handling issues

--- a/public/index.html
+++ b/public/index.html
@@ -115,9 +115,11 @@
         <h1>Create your new post for <span id="postBreaddit"></span></h1>
         <div class="d-flex justify-content-center">
           <input name="postTitle" class="text-white form-control w-75 float-none" type="text" id="postTitle" placeholder="Title" />
-          <br>
+        </div>
+        <div class="d-flex justify-content-center">
           <textarea name="postBody" class="text-white form-control w-75 float-none" type="textarea" id="#postBody" placeholder="Body"></textarea>
-          <br>
+        </div>
+        <div class="d-flex justify-content-center">
           <button type="button" class="btn text-white" id="submitNewPost">Submit</button>
         </div>
       </section>
